Fix bug with overlapping error banner and card + change icons in past scans to eyes

--- a/frontend/styles/index.css
+++ b/frontend/styles/index.css
@@ -7,6 +7,7 @@ html {
     height: 100%;
     width: 100%;
     padding: 2%;
+    position: relative;
 }
 
 .menu {
@@ -14,12 +15,8 @@ html {
     flex-direction: column;
     justify-content: center; /* horizontal alignment*/
     align-items: center; /* vertical alignment*/
-    height: 100%;
+    height: 80%;
 }
-
-/* .cards-holder {
-    //display: flex;
-} */
 
 .card {
     display: flex;
